egress-allow-aks-master-open.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-aks-master-open
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except: # deny traffic to onprem ??
        - 10.0.0.0/8
        - 49.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 142.205.0.0/16
    ports:
    - protocol: TCP
      port: 443
