egress-allow-td-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-td-dns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        # allow CA_BDC_PRD_cloud20_DNS1:vmprdbdcvqp01
        cidr: 10.114.22.61/32
    - ipBlock:
        # allow CA_SOC_PRD_cloud20_DNS1:vmprdscvqp01
        cidr: 10.106.22.63/32
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
